--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -379,7 +379,7 @@ obj-$(CONFIG_MACH_SHOOTER_U) += board-shooter_u-keypad.o
 obj-$(CONFIG_MACH_SHOOTER_U) += board-shooter_u-audio.o
 obj-$(CONFIG_MACH_SHOOTER_U) += htc_bdaddress.o board-shooter_u-rfkill.o
 obj-$(CONFIG_MACH_SHOOTER_U) += board-shooter_u-mmc.o board-shooter_u-wifi.o
-#obj-$(CONFIG_FORCE_FAST_CHARGE)         += fastchg.o
+obj-$(CONFIG_FORCE_FAST_CHARGE) += fastchg.o
 obj-$(CONFIG_MACH_SHOOTER_K) += board-shooter_k.o
 obj-$(CONFIG_MACH_SHOOTER_K) += board-shooter_k-keypad.o
 obj-$(CONFIG_MACH_SHOOTER_K) += board-shooter_k-audio.o
