--- a/.config
+++ b/.config
@@ -35,7 +35,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-anryl_v3.0.41.06"
+CONFIG_LOCALVERSION="-anryl_v3.0.41.1"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -293,9 +293,7 @@ CONFIG_MSM_MPM=y
 CONFIG_MSM_XO=y
 CONFIG_MSM_REMOTE_SPINLOCK_LDREX=y
 CONFIG_MSM_ADM3=y
-CONFIG_PERFLOCK=y
-CONFIG_PERFLOCK_BOOT_LOCK=y
-# CONFIG_PERFLOCK_SCREEN_POLICY is not set
+# CONFIG_PERFLOCK is not set
 
 #
 # MSM Board Selection
