--- a/.config
+++ b/.config
@@ -35,7 +35,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-anryl_v3.0.41.1"
+CONFIG_LOCALVERSION="-anryl_v.1-s2w"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -1352,6 +1352,10 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ATMEL_DETECT_USB_VBUS is not set
 # CONFIG_TOUCHSCREEN_ATMEL_WLS is not set
 CONFIG_TOUCHSCREEN_ATMEL=y
+CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE=y
+# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_DISABLED is not set
+CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_ENABLED=y
+# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_ENABLED_WITH_BACKLIGHT is not set
 # CONFIG_TOUCHSCREEN_NTRIG is not set
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
 # CONFIG_TOUCHSCREEN_ADS7846 is not set
