--- a/.config
+++ b/.config
@@ -1773,6 +1773,7 @@ CONFIG_THERMAL_PM8901=y
 # CONFIG_THERMAL_TSENS is not set
 CONFIG_THERMAL_TSENS8x60=y
 # CONFIG_THERMAL_PM8XXX is not set
+CONFIG_THERMAL_MONITOR=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
