--- a/arch/arm/configs/shooter_u_defconfig
+++ b/arch/arm/configs/shooter_u_defconfig
@@ -44,7 +44,7 @@ CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZMA is not set
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
-# CONFIG_SWAP is not set
+CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
@@ -421,8 +421,8 @@ CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
 CONFIG_MSM8X60_AUDIO=y
 # CONFIG_MSM8X60_FTM_AUDIO_DEVICES is not set
-CONFIG_HTC_OFFMODE_ALARM=y
-CONFIG_HTC_QUICKBOOT_OFFMODE_ALARM=y
+# CONFIG_HTC_OFFMODE_ALARM is not set
+# CONFIG_HTC_QUICKBOOT_OFFMODE_ALARM is not set
 CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 # CONFIG_MSM_DMA_TEST is not set
@@ -1773,6 +1773,7 @@ CONFIG_THERMAL_PM8901=y
 # CONFIG_THERMAL_TSENS is not set
 CONFIG_THERMAL_TSENS8x60=y
 # CONFIG_THERMAL_PM8XXX is not set
+CONFIG_THERMAL_MONITOR=y
 # CONFIG_WATCHDOG is not set
 CONFIG_SSB_POSSIBLE=y
 
@@ -2424,6 +2425,7 @@ CONFIG_USB_MSM_STANDARD_ACA=y
 CONFIG_MMC=y
 # CONFIG_MMC_DEBUG is not set
 CONFIG_MMC_PERF_PROFILING=y
+CONFIG_ZIMMER=y
 # CONFIG_MMC_DISABLE_WP_RFG_5 is not set
 CONFIG_MMC_UNSAFE_RESUME=y
 # CONFIG_MMC_CLKGATE is not set
@@ -2615,9 +2617,15 @@ CONFIG_ANDROID_EVENTS_LOG_SIZE=256
 # CONFIG_LINE6_USB is not set
 # CONFIG_VT6656 is not set
 # CONFIG_IIO is not set
+CONFIG_SNAPPY_COMPRESS=y
+CONFIG_SNAPPY_DECOMPRESS=y
 CONFIG_XVMALLOC=y
 CONFIG_ZRAM=y
+CONFIG_ZRAM_NUM_DEVICES=1
+CONFIG_ZRAM_DEFAULT_DISKSIZE=100663296
 # CONFIG_ZRAM_DEBUG is not set
+CONFIG_ZRAM_LZO=y
+# CONFIG_ZRAM_SNAPPY is not set
 # CONFIG_FB_SM7XX is not set
 CONFIG_MACH_NO_WESTBRIDGE=y
 # CONFIG_USB_ENESTORAGE is not set
