--- a/.config
+++ b/.config
@@ -35,7 +35,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-anryl_v.42.02-s2w"
+CONFIG_LOCALVERSION="-anryl_v.42.09-3"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -98,6 +98,8 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+# CONFIG_CC_OPTIMIZE_DEFAULT is not set
+CONFIG_CC_OPTIMIZE_ALOT=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=5
@@ -133,6 +135,7 @@ CONFIG_VM_EVENT_COUNTERS=y
 CONFIG_COMPAT_BRK=y
 # CONFIG_SLAB is not set
 CONFIG_SLUB=y
+# CONFIG_SLQB is not set
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
 CONFIG_HAVE_OPROFILE=y
@@ -166,6 +169,7 @@ CONFIG_LBDAF=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
+# CONFIG_IOSCHED_ROW is not set
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
 CONFIG_CGROUP_BFQIO=y
@@ -605,6 +609,7 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 # CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
+CONFIG_ALLOW_CPU_ALIGNMENT=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
@@ -635,7 +640,7 @@ CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_TABLE=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
@@ -643,7 +648,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_SMARTASS2 is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_WHEATLEY is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -652,9 +657,9 @@ CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
 # CONFIG_SEC_LIMIT_MAX_FREQ is not set
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_SMARTASS2=y
-CONFIG_CPU_FREQ_GOV_WHEATLEY=y
+# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+# CONFIG_CPU_FREQ_GOV_SMARTASS2 is not set
+# CONFIG_CPU_FREQ_GOV_WHEATLEY is not set
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
@@ -1360,8 +1365,8 @@ CONFIG_INPUT_TOUCHSCREEN=y
 # CONFIG_TOUCHSCREEN_ATMEL_WLS is not set
 CONFIG_TOUCHSCREEN_ATMEL=y
 CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE=y
-# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_DISABLED is not set
-CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_ENABLED=y
+CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_DISABLED=y
+# CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_ENABLED is not set
 # CONFIG_TOUCHSCREEN_ATMEL_SWEEP2WAKE_ENABLED_WITH_BACKLIGHT is not set
 # CONFIG_TOUCHSCREEN_NTRIG is not set
 # CONFIG_TOUCHSCREEN_ATMEL_224E is not set
@@ -1768,7 +1773,7 @@ CONFIG_SENSORS_MSM_ADC=y
 # CONFIG_SENSORS_W83627HF is not set
 # CONFIG_SENSORS_W83627EHF is not set
 CONFIG_THERMAL=y
-# CONFIG_THERMAL_HWMON is not set
+CONFIG_THERMAL_HWMON=y
 CONFIG_THERMAL_PM8901=y
 # CONFIG_THERMAL_PM8058 is not set
 # CONFIG_THERMAL_MSM_POPMEM is not set
