those reboots are crazy (

--- a/.config
+++ b/.config
@@ -35,7 +35,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-anryl_v.42.09-3"
+CONFIG_LOCALVERSION="-anryl_v.42.11"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -427,8 +427,8 @@ CONFIG_AMSS_7X25_VERSION_2009=y
 # CONFIG_AMSS_7X25_VERSION_2008 is not set
 CONFIG_MSM8X60_AUDIO=y
 # CONFIG_MSM8X60_FTM_AUDIO_DEVICES is not set
-# CONFIG_HTC_OFFMODE_ALARM is not set
-# CONFIG_HTC_QUICKBOOT_OFFMODE_ALARM is not set
+CONFIG_HTC_OFFMODE_ALARM=y
+CONFIG_HTC_QUICKBOOT_OFFMODE_ALARM=y
 CONFIG_RTAC=y
 # CONFIG_MSM_VREG_SWITCH_INVERTED is not set
 # CONFIG_MSM_DMA_TEST is not set
