some dirty tweakz and cherry picks removed s2w causing reboots testing

--- a/.config
+++ b/.config
@@ -17,7 +17,7 @@ CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
 CONFIG_GENERIC_LOCKBREAK=y
 CONFIG_ARM_TICKET_LOCKS=y
-CONFIG_RWSEM_GENERIC_SPINLOCK=y
+CONFIG_RWSEM_XCHGADD_ALGORITHM=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
 CONFIG_GENERIC_HWEIGHT=y
@@ -35,7 +35,7 @@ CONFIG_HAVE_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-anryl-02"
+CONFIG_LOCALVERSION="-anryl-DEV-03"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -97,7 +97,9 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_LZMA is not set
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+# CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+# CONFIG_CC_OPTIMIZE_DEFAULT is not set
+CONFIG_CC_OPTIMIZE_ALOT=y
 CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_PANIC_TIMEOUT=5
@@ -410,8 +412,6 @@ CONFIG_MSM_DALRPC=y
 CONFIG_MSM_CPU_FREQ_SET_MIN_MAX=y
 CONFIG_MSM_CPU_FREQ_MAX=1512000
 CONFIG_MSM_CPU_FREQ_MIN=192000
-CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=1512000
-CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=192000
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_AMSS_7X25_VERSION_2009=y
@@ -489,6 +489,7 @@ CONFIG_FOOTPRINT_IRQ=y
 # CONFIG_TIWLAN_SDIO is not set
 CONFIG_HTC_BATT_ALARM=y
 # CONFIG_REMOVE_EBI1_FIXED_CLK is not set
+CONFIG_FORCE_FAST_CHARGE=y
 # CONFIG_HTC_ACCESSORY_ONEWIRE is not set
 
 #
@@ -600,6 +601,7 @@ CONFIG_DEFAULT_MMAP_MIN_ADDR=32768
 # CONFIG_ARCH_ENABLE_MEMORY_HOTREMOVE is not set
 CONFIG_FORCE_MAX_ZONEORDER=11
 CONFIG_ALIGNMENT_TRAP=y
+CONFIG_ALLOW_CPU_ALIGNMENT=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
 # CONFIG_SECCOMP is not set
 # CONFIG_CC_STACKPROTECTOR is not set
@@ -634,9 +636,10 @@ CONFIG_CPU_FREQ_STAT_DETAILS=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_INTELLIDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_SAVAGEDZEN=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -645,6 +648,7 @@ CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND_2_PHASE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_SAVAGEDZEN=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_IDLE_GOV_LADDER=y
 CONFIG_CPU_IDLE_GOV_MENU=y
@@ -1758,7 +1762,7 @@ CONFIG_THERMAL_HWMON=y
 CONFIG_THERMAL_PM8901=y
 # CONFIG_THERMAL_PM8058 is not set
 # CONFIG_THERMAL_MSM_POPMEM is not set
-# CONFIG_THERMAL_TSENS is not set
+CONFIG_THERMAL_TSENS=y
 # CONFIG_THERMAL_TSENS8960 is not set
 # CONFIG_THERMAL_PM8XXX is not set
 # CONFIG_WATCHDOG is not set
@@ -2702,8 +2706,8 @@ CONFIG_TMPFS=y
 CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_ADFS_FS is not set
 # CONFIG_AFFS_FS is not set
-# CONFIG_HFS_FS is not set
-# CONFIG_HFSPLUS_FS is not set
+CONFIG_HFS_FS=y
+CONFIG_HFSPLUS_FS=y
 # CONFIG_BEFS_FS is not set
 # CONFIG_BFS_FS is not set
 # CONFIG_EFS_FS is not set
