--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -121,6 +121,13 @@ config CPU_FREQ_DEFAULT_GOV_INTERACTIVE
 	  loading your cpufreq low-level hardware driver, using the
 	  'interactive' governor for latency-sensitive workloads.
 
+config CPU_FREQ_DEFAULT_GOV_SAVAGEDZEN
+   bool "savagedzen"
+   select CPU_FREQ_GOV_SAVAGEDZEN
+   select CPU_FREQ_GOV_PERFORMANCE
+   help
+     Use the CPUFreq governor 'savagedzen' as default.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -241,6 +248,10 @@ config CPU_FREQ_GOV_CONSERVATIVE
 	  For details, take a look at linux/Documentation/cpu-freq.
 
 	  If in doubt, say N.
+
+config CPU_FREQ_GOV_SAVAGEDZEN
+   tristate "'savagedzen' cpufreq governor"
+   depends on CPU_FREQ
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
